tests/__snapshots__/validation-failFast-wrong-option-value-type-stderr.snap.txt
Error: Value for the 'failFast' option must be a boolean.

  1 | {
  2 |   "failFast": "never",
    |               ~~~~~~~
  3 |   "target": "latest"
  4 | }
  5 | 

      at ./tstyche.json:2:15

